@@ -5,6 +5,10 @@ CHANGES IN CUPS V1.7.1
 
 	- Auto debug logging was broken in 1.7.0 (<rdar://problem/15331639>)
 	- Some gzip'd PPD files could not be used (<rdar://problem/15386424>)
+	- Cleaned up some job logging in the scheduler
+	  (<rdar://problem/15332672>)
+	- ATTR messages could cause string pool memory corruption in the
+	  scheduler (<rdar://problem/15382819>)
 
 
 CHANGES IN CUPS V1.7.0
